--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,8 +4,11 @@
 
 body {
   padding-bottom: 70px;
-  color: var(--global-text-color);
-  background-color: var(--global-bg-color);
+  // color: var(--global-text-color);
+  // background-color: var(--global-bg-color);
+  color: #1D1C1B;
+  background-color: #F5F1E0;
+  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
 
   h1,
   h2,
