--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,8 +6,8 @@ body {
   padding-bottom: 70px;
   // color: var(--global-text-color);
   // background-color: var(--global-bg-color);
-  color: #1D1C1B;
-  background-color: #F5F1E0;
+  color: #1d1c1b;
+  background-color: #f5f1e0;
   font-family: Georgia, Cambria, "Times New Roman", Times, serif;
 
   h1,
