--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,11 +4,8 @@
 
 body {
   padding-bottom: 70px;
-  // color: var(--global-text-color);
-  // background-color: var(--global-bg-color);
-  color: #1d1c1b;
-  background-color: #f5f1e0;
-  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+  color: var(--global-text-color);
+  background-color: var(--global-bg-color);
 
   h1,
   h2,
