--- a/_sass/_dario.scss
+++ b/_sass/_dario.scss
@@ -1,5 +1,5 @@
 .dario-post {
-  font-family: 'Georgia Pro', Georgia, 'Times New Roman', serif;
+  font-family: "Georgia Pro", Georgia, "Times New Roman", serif;
   max-width: $max-content-width;
   margin: 3rem auto;
   padding: 2rem;
