--- a/_sass/_dario.scss
+++ b/_sass/_dario.scss
@@ -9,10 +9,10 @@ $dario-header-margin: 4rem;
 $dario-content-padding: 0 2rem;
 
 // Body styling
-.dario-body {
-  font-family: "Charter", "Georgia", "Times New Roman", serif;
-  font-size: $dario-font-size;
-  line-height: $dario-line-height;
+body.dario-body {
+  font-family: "Crimson Text", "Georgia", "Times New Roman", serif !important;
+  font-size: $dario-font-size !important;
+  line-height: $dario-line-height !important;
   color: var(--global-text-color);
   background-color: var(--global-bg-color);
   -webkit-font-smoothing: antialiased;
@@ -51,7 +51,7 @@ $dario-content-padding: 0 2rem;
 }
 
 .dario-title {
-  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Inter", "Helvetica Neue", Arial, sans-serif !important;
   font-size: 2.5rem;
   font-weight: 700;
   line-height: 1.2;
@@ -68,7 +68,7 @@ $dario-content-padding: 0 2rem;
 }
 
 .dario-subtitle {
-  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Inter", "Helvetica Neue", Arial, sans-serif !important;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.4;
@@ -81,7 +81,7 @@ $dario-content-padding: 0 2rem;
 }
 
 .dario-date {
-  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Inter", "Helvetica Neue", Arial, sans-serif !important;
   font-size: 0.9rem;
   font-weight: 500;
   color: var(--global-text-color-light);
@@ -93,6 +93,9 @@ $dario-content-padding: 0 2rem;
 .dario-content {
   // Typography
   p {
+    font-family: "Crimson Text", "Georgia", "Times New Roman", serif !important;
+    font-size: $dario-font-size !important;
+    line-height: $dario-line-height !important;
     margin: 0 0 1.5rem 0;
     color: var(--global-text-color);
   }
@@ -104,7 +107,7 @@ $dario-content-padding: 0 2rem;
   h4,
   h5,
   h6 {
-    font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
+    font-family: "Inter", "Helvetica Neue", Arial, sans-serif !important;
     font-weight: 600;
     line-height: 1.3;
     margin: 2.5rem 0 1rem 0;
@@ -163,6 +166,8 @@ $dario-content-padding: 0 2rem;
     padding-left: 1.5rem;
 
     li {
+      font-family: "Crimson Text", "Georgia", "Times New Roman", serif !important;
+      font-size: $dario-font-size !important;
       margin-bottom: 0.5rem;
       line-height: $dario-line-height;
     }
@@ -183,6 +188,7 @@ $dario-content-padding: 0 2rem;
     font-style: italic;
 
     p {
+      font-family: "Crimson Text", "Georgia", "Times New Roman", serif !important;
       margin: 0;
     }
 
@@ -253,6 +259,28 @@ $dario-content-padding: 0 2rem;
 html[data-theme="dark"] {
   .dario-header {
     border-bottom-color: var(--global-divider-color);
+  }
+}
+
+// Force font application with high specificity
+body.dario-body .dario-content {
+  * {
+    font-family: "Crimson Text", "Georgia", "Times New Roman", serif !important;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Inter", "Helvetica Neue", Arial, sans-serif !important;
+  }
+
+  code,
+  pre,
+  code * {
+    font-family: "SF Mono", Monaco, "Cascadia Code", "Roboto Mono", Consolas, "Courier New", monospace !important;
   }
 }
 
