--- a/_layouts/dario.liquid
+++ b/_layouts/dario.liquid
@@ -4,20 +4,17 @@
     {% include head.liquid %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400;1,600&family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    >
-
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400;1,600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <!-- Force font loading with inline styles -->
     <style>
       body.dario-body,
       body.dario-body *:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(code):not(pre) {
         font-family: 'Crimson Text', Georgia, 'Times New Roman', serif !important;
-        font-size: 18px !important;
+        font-size: 24px !important;
         line-height: 1.7 !important;
       }
-
+      
       .dario-title,
       .dario-subtitle,
       .dario-date,
@@ -29,14 +26,18 @@
       .dario-content h6 {
         font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif !important;
       }
-
+      
       .dario-title {
-        font-size: 2.5rem !important;
+        font-size: 3rem !important;
         font-weight: 700 !important;
         line-height: 1.2 !important;
       }
+      
+      .dario-subtitle {
+        font-size: 1.5rem !important;
+      }
     </style>
-
+    
     {% if page._styles %}
       <style type="text/css">
         {{ page._styles }}
